@@ -39,6 +39,7 @@ import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.bothE;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.hasLabel;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.inE;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.inV;
+import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.or;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.outV;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.unfold;
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.Constants.ASSET_SCHEMA_TYPE;
@@ -72,8 +73,10 @@ import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.op
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_KEY_METADATA_ID;
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_KEY_PREFIX_ELEMENT;
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_KEY_PREFIX_INSTANCE_PROPERTY;
+import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_KEY_PROCESS_PAINTED;
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_KEY_RELATIONSHIP_GUID;
 import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_NAME_PORT_TYPE;
+import static org.odpi.openmetadata.openconnectors.governancedaemonconnectors.openlineageconnectors.janusconnector.utils.GraphConstants.PROPERTY_NAME_PROCESS_PAINTED;
 
 public class LineageGraphConnector extends LineageGraphConnectorBase {
 
@@ -132,12 +135,18 @@ public class LineageGraphConnector extends LineageGraphConnectorBase {
     public void schedulerTask() {
 
         try {
-            List<Vertex> vertices = g.V().has(PROPERTY_KEY_LABEL, PROCESS).toList();
-            List<String> guidList = vertices.stream().map(v -> g.V(v.id()).elementMap(PROPERTY_KEY_ENTITY_GUID)
-                    .toList().get(0)
-                    .get(PROPERTY_KEY_ENTITY_GUID).toString()).collect(Collectors.toList());
+            List<Vertex> vertices = g.V()
+                    .and(__.has(PROPERTY_KEY_LABEL, PROCESS),
+                            or(__.has(PROPERTY_KEY_PROCESS_PAINTED, Boolean.FALSE.toString()),__.hasNot(PROPERTY_KEY_PROCESS_PAINTED)))
+                    .toList();
+            List<String> guidList = vertices.stream()
+                    .map(v ->  g.V(v.id()).elementMap(PROPERTY_KEY_ENTITY_GUID).toList().get(0).get(PROPERTY_KEY_ENTITY_GUID).toString())
+                    .collect(Collectors.toList());
 
-            guidList.forEach(process -> findInputColumns(g, process));
+            guidList.forEach(
+                    guid -> {findInputColumns(g, guid);
+                    g.V().has(PROPERTY_KEY_ENTITY_GUID, guid).property(PROPERTY_KEY_PROCESS_PAINTED, Boolean.TRUE.toString()).iterate();
+            });
             if (graphFactory.isSupportingTransactions()) {
                 g.tx().commit();
             }
@@ -428,6 +437,11 @@ public class LineageGraphConnector extends LineageGraphConnectorBase {
      */
     @Override
     public void updateEntity(LineageEntity lineageEntity) {
+        // on update, unpaint a process in order to make it eligible again for the scheduled job
+        if(lineageEntity.getTypeDefName().equals(PROCESS)){
+            lineageEntity.getProperties().put(PROPERTY_NAME_PROCESS_PAINTED, Boolean.FALSE.toString());
+        }
+
         Iterator<Vertex> vertex = g.V().has(PROPERTY_KEY_ENTITY_GUID, lineageEntity.getGuid());
         if (!vertex.hasNext()) {
             log.debug("when trying to update, vertex with guid {} was not found  ", lineageEntity.getGuid());
